Refactor: 아이템 이름과 아이디 불러오는 컨트롤러, 주문목록 조회 페이징과 선택적 아이템만 볼 수 있도록 수정